# SimpleParser

./: LICENSE  Makefile  README.md  pyproject.toml
src/simpleparser/: simpleparser.py
tests/: test_simpleparser.py
