[project]
name = "SimpleParser"
version = "0.0.1"
authors = [
  { name="Johan Öberg", email="devjoa@gmail.com" },
]
description = "A simple parser generator"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/devjoa/simpleparser"
Issues = "https://github.com/devjoa/simpleparser/issues"
